# RustWB

./: README.md
L0/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker_compose.env
L0/additional_files/: model.json  postgres_queries.sql
L0/db_init/: init.sql
L0/json_files/: model.json  postgres_queries.sql
L0/src/: config.rs  controller.rs  data_model.rs  lib.rs  main.rs  model.rs
L0/src/db/: postgres_db.rs  redis_db.rs
L0/src/db_modules/: postgres_module.rs  redis_module.rs
l1/t1/src/: main.rs
l1/t10/: Cargo.toml
l1/t10/src/: main.rs
l1/t11/: Cargo.toml
l1/t11/src/: main.rs
l1/t12/src/: main.rs
l1/t13/src/: main.rs
l1/t14/src/: main.rs
l1/t15/src/: main.rs
l1/t16/src/: main.rs
l1/t17/: Cargo.toml
l1/t17/src/: main.rs
l1/t18/: Cargo.toml
l1/t18/src/: main.rs
l1/t19/: Cargo.toml
l1/t19/src/: main.rs
l1/t2/src/: main.rs
l1/t20/: Cargo.toml
l1/t20/src/: main.rs
l1/t21/: Cargo.toml
l1/t21/src/: main.rs
l1/t22/: Cargo.toml
l1/t22/src/: main.rs
l1/t23/: Cargo.toml
l1/t23/src/: main.rs
l1/t24/: Cargo.toml
l1/t24/src/: main.rs
l1/t3/src/: main.rs
l1/t4/: Cargo.toml
l1/t4/src/: main.rs
l1/t5/: Cargo.toml
l1/t5/src/: main.rs
l1/t6/: Cargo.toml
l1/t6/src/: main.rs
l1/t7/: Cargo.toml
l1/t7/src/: main.rs
l1/t8/: Cargo.toml
l1/t8/src/: main.rs
l1/t9/: Cargo.toml
l1/t9/src/: main.rs
l2/t1/: test.txt
l2/t1/src/: main.rs
l2/t10/client_side/: Cargo.toml
l2/t10/client_side/src/: main.rs
l2/t10/server_side/: Cargo.toml
l2/t10/server_side/src/: main.rs
l2/t11/: Cargo.toml  README.md
l2/t11/src/: controller.rs  main.rs  model.rs
l2/t12/src/: main.rs
l2/t13/src/: main.rs
l2/t14/src/: main.rs
l2/t15/src/: main.rs
l2/t16/src/: main.rs
l2/t2/src/: main.rs
l2/t3/: input.txt  output.txt
l2/t3/src/: main.rs
l2/t4/src/: main.rs
l2/t5/: Cargo.toml  input.txt
l2/t5/src/: main.rs
l2/t6/: Cargo.toml  input.txt  input2.txt
l2/t6/src/: main.rs
l2/t7/: Cargo.toml  input.txt
l2/t7/src/: main.rs
l2/t8/: Cargo.toml
l2/t8/src/: main.rs
l2/t9/: Cargo.toml
l2/t9/src/: main.rs
l3/t1/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker_compose.env
l3/t1/db_init/: init.sql
l3/t1/src/: auth.rs  config.rs  controller.rs  data_types.rs  errors.rs  main.rs  pg_db.rs
l3/t1/src/modules/: auth_module.rs  post_module.rs  user_module.rs
l3/t2/: README.md
l3/t2/data/: log.json
l3/t2/task_creator/: Cargo.toml
l3/t2/task_creator/src/: main.rs
l3/t2/task_logger/: Cargo.toml
l3/t2/task_logger/src/: main.rs
l3/t2/task_processor/: Cargo.toml
l3/t2/task_processor/src/: main.rs
l3/t3/: .env  Cargo.toml  README.md
l3/t3/src/: app_data.rs  config.rs  controller.rs  data_model.rs  errors.rs  main.rs
l3/t3/src/modules/: auth_module.rs  room_module.rs
l3/t4/: README.md  docker-compose.yaml  docker_compose.env
l3/t4/db_init/: init.sql
l3/t4/listener/: .env  Cargo.toml  Dockerfile  docker_compose.env
l3/t4/listener/src/: config.rs  kafka_module.rs  kafka_producer.rs  main.rs
l3/t4/server/: .env  Cargo.toml  Dockerfile  docker_compose.env
l3/t4/server/src/: config.rs  controller.rs  errors.rs  main.rs  pg_db.rs
l3/t4/server/src/modules/: product_module.rs  user_module.rs
l3/t4/t7/: Cargo.toml  docker-compose.yaml
l3/t4/t7/src/: config.rs  controller.rs  errors.rs  main.rs  redis_db.rs
l3/t4/t7/src/modules/: event_manager.rs  subscription_manager.rs
l3/t7/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
l3/t7/src/: controller.rs  errors.rs  main.rs  redis_db.rs
l3/t7/src/modules/: event_manager.rs  notification_module.rs  subscription_manager.rs
