[package]
name = "L0"
version = "0.1.0"
edition = "2021"

default-run="L0"

[dependencies]
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio-postgres = {  version = "0.7.11" , features=["with-uuid-1", "with-chrono-0_4"]}
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
dotenv = "0.15.0"
deadpool-postgres = { version = "0.14.0"}
async-std = { version = "1.12.0"}
chrono = { version = "0.4.38", features = ["serde"]}
futures = "0.3.30"

