[package]
name = "l3_t1"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
deadpool-postgres = { version = "0.14.0"}
axum = "0.7.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio-postgres = {  version = "0.7.11" , features=["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"]}
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"