[package]
name = "t3"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.40"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
