[package]
name = "task_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
notify = "7.0.0"
