[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
