[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = {  version = "0.7.11" , features=["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
deadpool-postgres = { version = "0.14.0"}
dotenv = "0.15.0"
